feath: teste api com pesquisas.