@@ -1,6 +1,7 @@
 package com.algaworks.algafood.api.controller;
 
 import java.util.List;
+import java.util.Map;
 
 import javax.validation.Valid;
 
@@ -89,8 +90,17 @@ public class PedidoController {
 	}
 	
 	private Pageable traduzirPageable(Pageable apiPageable) {
-		var mapeamento = ImmutableMap.of("nomeCliente", "cliente.nome", "codigo", "codigo",
-				 "restaurante.nome", "restaurante.nome");
+		var mapeamento = Map.of(
+				"codigo", "codigo",
+				"subtotal", "subtotal",
+				"taxaFrete", "taxaFrete",
+				"valorTotal", "valorTotal",
+				"dataCriacao", "dataCriacao",
+				"restaurante.nome", "restaurante.nome",
+				"restaurante.id", "restaurante.id",	
+				"cliente.id", "cliente.id",
+				"cliente.nome", "cliente.nome"
+				);
 		return PageableTranlator.translate(apiPageable, mapeamento);
 				
 	}
